# argon2_quantum

./: .bandit.yml  .dockerignore  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  mypy.ini  pyproject.toml  qs_kdf.py  qsargon2.py  requirements-dev.txt  requirements.txt
.codex/: setup.sh
.github/workflows/: ci.yml
docs/: KDF.md  deployment.md  getting-started.md  lambda-build.md  one-pager.md  quantum-circuit.md  runbook.md
infra/: app.py  qs_kdf_stack.py  requirements.txt
qs_kdf/: __init__.py  cli.py  core.py
scripts/: package_lambda.sh
src/: qsargon2.py
src/qs_kdf/: __init__.py  cli.py  constants.py  core.py  test_backend.py
src/scripts/: qs_kdf  qsargon2
terraform/: main.tf
tests/: conftest.py  test_backend_classes.py  test_entry_script.py  test_lambda.py  test_lambda_handler.py  test_qs_kdf.py  test_qsargon2.py  test_redis_cache.py  test_warmup.py
