[build-system]
requires = ["setuptools>=67", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "argon2-quantum"
version = "0.1.0"
description = "Toy quantum stretch KDF with Argon2"
readme = "README.md"
authors = [{name = "Example", email = "example@example.com"}]
requires-python = ">=3.10"
dependencies = [
    "argon2-cffi",
    "boto3",
    "redis",
    "amazon-braket-sdk",
]

[project.scripts]
qs_kdf = "qs_kdf.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]


[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "B"]
