[build-system]
requires = ["setuptools>=67", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "argon2-quantum"
version = "0.1.0"
description = "Toy quantum stretch KDF with Argon2"
readme = "README.md"
authors = [{name = "Example", email = "example@example.com"}]
requires-python = ">=3.10"
dependencies = [
    "argon2-cffi==25.1.0",
    "boto3==1.34.0",
    "redis==5.0.4",
    "amazon-braket-sdk==1.80.0",
]

[project.scripts]
qs_kdf = "qs_kdf.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}
py-modules = ["qsargon2"]

[tool.setuptools.packages.find]
where = ["src"]


[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "B"]
